--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:text="@string/loginTitle"
         android:textAlignment="center"
         android:gravity="center"
+        android:layout_margin="20dp"
         android:textSize="40sp" />
 
     <LinearLayout
