--- a/app/src/main/res/layout/activity_acelerometro.xml
+++ b/app/src/main/res/layout/activity_acelerometro.xml
@@ -15,4 +15,28 @@
         android:layout_margin="20dp"
         android:textSize="40sp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/aclX"
+        android:text="X"
+        android:textSize="20sp"
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/aclY"
+        android:text="Y"
+        android:textSize="20sp"
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/aclZ"
+        android:text="Z"
+        android:textSize="20sp"
+        android:layout_margin="10dp" />
+
 </LinearLayout>
