--- a/app/src/main/res/layout/activity_giroscopio.xml
+++ b/app/src/main/res/layout/activity_giroscopio.xml
@@ -15,4 +15,30 @@
         android:textAlignment="center"
         android:layout_margin="20dp"
         android:textSize="40sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvX"
+        android:text="X"
+        android:textSize="20sp"
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvY"
+        android:text="Y"
+        android:textSize="20sp"
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvZ"
+        android:text="Z"
+        android:textSize="20sp"
+        android:layout_margin="10dp" />
+
+
 </LinearLayout>
