--- a/app/src/main/res/layout/activity_luz.xml
+++ b/app/src/main/res/layout/activity_luz.xml
@@ -27,6 +27,6 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:hint="" />
 
 </LinearLayout>
