--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -33,6 +33,7 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sensors_btn_txt" />
+            android:text="@string/sensors_btn_txt"
+            android:onClick="sensores" />
     </LinearLayout>
 </LinearLayout>
