--- a/app/src/main/res/layout/activity_sensor_device.xml
+++ b/app/src/main/res/layout/activity_sensor_device.xml
@@ -21,7 +21,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:layout_margin="10dp"
-        android:onClick="Lists"
+        android:onClick="Lista"
         android:text="@string/lista" />
 
     <Button
