--- a/app/src/main/res/layout/activity_sensor_device.xml
+++ b/app/src/main/res/layout/activity_sensor_device.xml
@@ -21,7 +21,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:layout_margin="10dp"
-        android:onClick="Lista"
+        android:onClick="sensorsList"
         android:text="@string/lista" />
 
     <Button
@@ -30,7 +30,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:layout_margin="10dp"
-        android:onClick="Giroscopio"
+        android:onClick="gyroscopeView"
         android:text="@string/Giroscopio" />
 
     <Button
@@ -39,7 +39,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:layout_margin="10dp"
-        android:onClick="Luz"
+        android:onClick="lightView"
         android:text="@string/Luz" />
 
     <Button
@@ -48,7 +48,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:layout_margin="10dp"
-        android:onClick="Acelerometro"
+        android:onClick="accelerometer"
         android:text="@string/Acelerometro" />
 
 
